feat: enhance mobile experience with touch optimizations and safe area insets across views

--- a/index.html
+++ b/index.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="en">
   <head>
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vite App</title>
+    <!-- Mobile-optimized viewport with safe area insets for modern phones -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, minimum-scale=1.0, viewport-fit=cover">
+    <!-- Prevent iOS text size adjustment on orientation change -->
+    <meta name="format-detection" content="telephone=no">
+    <!-- Theme color for mobile browsers -->
+    <meta name="theme-color" content="#faf9f7">
+    <!-- Apple touch icon for iOS -->
+    <link rel="apple-touch-icon" href="/favicon.ico">
+    <title>Task Command Center</title>
   </head>
   <body>
     <div id="app"></div>
